Fixed overflow:auto issue causing the header dropdowns to be hidden.

--- a/stylesheets/css/kony_www.css
+++ b/stylesheets/css/kony_www.css
@@ -71,6 +71,8 @@ header {
     text-decoration: none; }
   header a:hover {
     color: #edf2f8; }
+  header .grid-container {
+    overflow: visible; }
   @media only screen and (max-width: 959px) {
     header {
       min-height: 55px;
